--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,10 @@
 image:
-    file: .gitpod.dockerfile
+  file: .gitpod.dockerfile
 ports:
-  - port: 5900
-    onOpen: ignore
-  - port: 6080
-    onOpen: open-preview
+- port: 5900
+  onOpen: ignore
+- port: 6080
+  onOpen: open-preview
 tasks:
-    - init: /usr/bin/python3 path_finding.py
-      command: /usr/bin/python3 path_finding.py
+  - init: python3 path_finding.py
+    command: python3 path_finding.py
